version 0.9.4
- New functions 'in_linear_sequence' and 'is_linear_sequence' 
  check for gaps/duplicates in numerical or time series.
- New function in_range checks whether a variable is between (strict)
  bounds.
- New function 'part_whole_relation' facilitates checking aggregates
  against details, for data in 'long' format.
- New helper functions that for split-apply-combine on vectors, with the property
  that output is always of the same size as the input: 'sum_by', 'min_by', 'max_by'
  'mean_by' and the general 'do_by'.
- New convenience function 'field_length' checks number (or range) of code
  points.
- New convenience function 'number_format' with simple syntax for
  specifying layout of numbers that are stored as character.
- New functions to check (non)existens of a given set of key combinations:
  'contains_exactly', 'contains_at_least', 'contains_at_most', 'does_not_contain'.
  Support for globbing and regular expression is built in, and tests can be
  performed group-wise.
- New function 'field_format': convenience wrapper for 'grepl' that also supports
  globbing.
- Fix: option 'lin.ineq.eps' was ignored by 'confront'.
- Breaking change: for consistency, the '...' argument in 'exists_one' and 'exists_any'
  is replaced with 'by'. This only affects cases with multiple grouping variables.


version 0.9.3
- New functions 'exists_any' and 'exists_one' to help define cross-record 
  validation rules (thanks to David Salgado)
- results of 'sort' and 'aggregate' now include key columns (if any)
- Added accepted JSS paper as vignette.
- Added CITATION file

version 0.9.2
- fixed CRAN issue: plots generated during tests would end up under inst/tinytest
  which is against CRAN policy. (Thanks to Kurt Hornik).

version 0.9.1
- Fixed nonstandard URL caught on CRAN
- Added ORCID, link to book in DESCRIPTION

version 0.9.0
- 'confront' now accepts a vector of 'key's (thanks to Luca Gramaglia for
   suggesting)