@@ -68,11 +68,13 @@ export(part_whole_relation)
 export(reset)
 export(run_validation_dir)
 export(run_validation_file)
+export(satisfying)
 export(sum_by)
 export(validate_options)
 export(validator)
 export(values)
 export(variables)
+export(violating)
 export(voptions)
 exportClasses(lbj_cells)
 exportClasses(lbj_rules)
